Respond to feedback

--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -115,9 +115,11 @@ BibTeX export options can be customized via Options -> BibTeX in Mendeley Deskto
   year            = {2020}
 }
 
-@misc{ HEStandard,
-  howpublished = {https://homomorphicencryption.org/standard/},
-  year         = {Retreived March 2022}
+@article{ HEStandard,
+  author          = {Martin Albrecht and Melissa Chase and Hao Chen and Jintai Ding and Shafi Goldwasser and Sergey Gorbunov and Shai Halevi and Jeffrey Hoffstein and Kim Laine and Kristin Lauter and Satya Lokam and Daniele Micciancio and Dustin Moody and Travis Morrison and Amit Sahai and Vinod Vaikuntanathan},
+  journal         = {Protecting Privacy through Homomorphic Encryption},
+  title           = {Homomorphic Encryption Standard},
+  year            = {2022}
 }
 
 @article{ NTT,
@@ -240,7 +242,8 @@ BibTeX export options can be customized via Options -> BibTeX in Mendeley Deskto
 }
 
 @misc{ MovingMNIST,
-  howpublished = {http://www.cs.toronto.edu/~nitish/unsupervised\_video/},
+  author       = {Nitish Srivastava and Elman Mansimov and Ruslan Salakhutdinov},
+  howpublished = {https://www.cs.toronto.edu/~nitish/unsupervised\_video/},
   title        = {Unsupervised Learning of Video Representations using LSTMs},
   year         = {Retrieved March 2022}
 }
