--- a/Introduction.tex
+++ b/Introduction.tex
@@ -5,13 +5,13 @@
 \label{sec:motivation}
 \setlength{\leftskip}{0.25cm}
 \indent \indent
-In the modern world, computers have improved almost every aspect of our lives. Recently, home security has become the latest target of the technology revolution. Companies like Ring \cite{RING} and Eufy \cite{EUFY} offer IoT devices like doorbells and cameras to allow their customers to monitor their property 24/7. On top of traditional surveillance, these companies also provide software solutions to monitor the footage recorded by their devices and interpret it. For example, a doorbell may recognise who is at the front door and allow them to enter, or alert the user to the presence of a stranger if it doesn't. However, the computational intensity of these inferences means footage must be transferred from the devices to more powerful servers.
+Computers have improved almost every aspect of modern life. Recently, home security has become the latest target of the technology revolution. Companies like Ring [RING] and Eufy [EUFY] offer IoT devices like doorbells and cameras to allow their customers to monitor their property 24/7. On top of traditional surveillance, these companies also provide software solutions to analyse footage. For example, a doorbell may recognise a visitor or alert to the presence of a stranger. However, the computational intensity of inference means footage must be transferred to more powerful servers.
 \smallskip \\ \indent
-In order to preserve privacy, video is encrypted before it is sent to the server. However, the footage must be decrypted when the inference algorithms are executing. This is an immediate privacy concern. Having the ability to decrypt the footage exposes the opportunity for employees of these companies to access constant surveillance of peoples' homes. The possibilities for exploitation are endless. Malicious actors could use this information to monitor people's location, appraise their belongings, or use the contents of footage for extortion, to name a few. Homomorphic Encryption may provide a solution to this.
+To preserve security, video is encrypted before transmission to the server. However, the footage must be decrypted when the inference algorithms are executing. This is an immediate privacy concern. Having the ability to decrypt the footage exposes the opportunity for employees of these companies to access constant surveillance of peoples' homes. Consequently, malicious actors could use this information to monitor peoples' location, appraise their belongings, use the contents of footage for extortion, and more. Homomorphic Encryption (henceforth HE) may provide a solution to this.
 \smallskip \\ \indent
-Homomorphic Encryption (henceforth HE) is a cryptographic method of encrypting data such that mathematical operations can be performed on encrypted data, or \textit{ciphertext}, itself, rather than on the raw data, or \textit{plaintext}. For example, consider the operation $3 \times 5$. In a traditional encryption scheme, the plain values $3$ and $5$ would be multiplied before encrypting the result. Using a homomorphic scheme, the $3$ and $5$ can be encrypted, and the ciphertexts multiplied so that when the ciphertext is decrypted, the plaintext is $15$. An open question is, can this technique be scaled to more complex algorithms, like those required for surveillance?
+In cryptography, HE describes encryption schemes that allow mathematical operations to be performed directly on encrypted data, or \textit{ciphertext}, rather than on raw data, or \textit{plaintext}. For example, consider $3 \times 5$. In a traditional encryption scheme, the plain values $3$ and $5$ would be multiplied before encrypting the result. Using a homomorphic scheme, the $3$ and $5$ can be encrypted, and the ciphertexts multiplied so that when the ciphertext is decrypted, the plaintext is $15$. An open question is, can this technique be scaled to more complex algorithms, like those required for surveillance?
 \smallskip \\ \indent
-More specifically, is it possible to extract the moving objects from a frame of HE video data? Moving object detection, also known as \textit{foreground extraction} or \textit{background subtraction}, is fundamental to modern surveillance systems. Detecting when, for example, somebody enters a property, allows the security systems to alert their owners, possibly pre-empting a break-in. To perform this analysis, the contents of a video must be modelled using a, usually probabilistic, function that allows significant changes in a pixels' value to be discerned. The difficulty of this arises when accounting for environmental changes that cause numerical variation, such as light levels when moving from day to night or different weather conditions causing objects to distort.
+More specifically, is it possible to extract the moving objects from a frame of HE video data? Moving object detection is fundamental to surveillance. Detecting when, for example, somebody enters a property allows security systems to alert their owners, possibly pre-empting a break-in. However, more than just motion must be sensed. Objects must be extracted and analysed to prevent users being notified of unimportant events like, for example, leaves blowing onto a property. Gradual changes and random noise in an environment make modelling a background for object detection a significant challenge to overcome.
 
 \setlength{\leftskip}{0cm}
 
@@ -20,11 +20,11 @@ More specifically, is it possible to extract the moving objects from a frame of 
 \label{sec:relatedWork}
 \setlength{\leftskip}{0.25cm}
 \indent \indent
-The lack of privacy caused by constant surveillance is not a new concern. There have been many attempts at solving video inference in the encrypted domain, but none are without flaws. For example, in 2013, Chu et al.\ \cite{Chu} proposed an encryption scheme that supports real-time moving object detection, but this was quickly shown to suffer from information leakage, leaving it vulnerable to chosen-plaintext attacks\footnote{ A \textit{chosen-plaintext attack} is a scenario in which an adversary can encrypt plaintexts of their choosing, and analyse the corresponding ciphertext in an attempt to break the encryption. }. Similarly, in 2017, Lin et al.\ \cite{Lin} proposed a different encryption scheme to achieve the same goal by only encrypting some of the bits in each pixel, but this is unprotected against steganographic\footnote{\textit{Steganography} describes the technique of information hiding. Like cryptography, steganography attempts to prevent adversaries from reading messages. Unlike cryptography, where the existence of a message is known but its contents are not, steganography attempts to hide the message's existence.} attacks. Therefore, while research has been able to solve the weaknesses in privacy, it is yet to offer a solution that also preserves security against adversaries directly attacking the encryption, making them useless to real-world applications.
+There have been many attempts at solving video inference in the encrypted domain, but none are without flaws. In 2013, Chu et al.\ \cite{Chu} proposed an encryption scheme that supports real-time moving object detection. However, this was quickly shown to suffer from information leakage, leaving it vulnerable to chosen-plaintext attacks \footnote{A \textit{chosen-plaintext attack} is a scenario in which an adversary can freely encrypt plaintexts of their choosing and analyse the resulting ciphertexts.} Similarly, in 2017, Lin et al.\ \cite{Lin} proposed an encryption scheme to achieve the same goal by only encrypting some of the bits in each pixel, but this is unprotected against steganographic \footnote{\textit{Steganography} describes the technique of securing messages through information hiding. Unlike cryptography, where the existence of a message is known, but its contents are not, steganography attempts to hide the message's existence.} attacks. Therefore, while research has solved the weaknesses in privacy, it is yet to offer a solution that also preserves security, making them useless to real-world applications.
 \smallskip \\ \indent
-Likewise, researchers have been investigating inference using HE for many years. In 2012, Graepel et al.\ \cite{Graepel} introduced machine learning in the HE domain. Dowlin et al.\ \cite{Graepel} built upon this when they developed the CryptoNets model for deep learning with HE in 2016. However, deep learning neural networks are considered overly complex for moving-object detection. Instead, GMMs are the most widely used technique for background modelling. There is much less research into this area of unsupervised learning within the HE domain. The best example appears to be when, in 2013, Pathak and Raj \cite{Pathak} proposed a HE implementation of a GMM for audio inference. But there does not seem to be any investigations linking HE and GMMs to video analysis.
+Likewise, researchers have been investigating inference using HE for many years. In 2012, Graepel et al.\ \cite {Graepel} introduced machine learning in the HE domain. Dowlin et al.\ \cite{Dowlin} built upon this when they developed the CryptoNets model for deep learning with HE in 2016. However, deep learning neural networks are considered overly complex for moving-object detection. Instead, Gaussian Mixture Models (GMMs) are the most common technique for background modelling. There is much less HE research into this area of unsupervised learning. The best example comes from 2013 when Pathak and Raj \cite{Pathak} proposed a HE implementation of a GMM for audio inference. But there do not seem to be any investigations linking HE and GMMs to video analysis.
 \smallskip \\ \indent
-It appears that the most prevailing explanation for this lack of research is HE's inapplicability to real-time applications, due to its high computational complexity. While this may be true now, it is important to acknowledge that advances in computing capability will reduce the relative difficulty of HE operations. Consequently, more insight into its applicability will become increasingly valuable, as suggested by the trend in the growing popularity of HE research. This dissertation attempts to offer some beginnings to this insight as it attempts to investigate the limitations of current HE implementations with respect to surveillance.
+The most prevailing explanation for this lack of research is HE's inapplicability to real-time applications due to its high computational complexity. While this may be true now, it is important to acknowledge that advances in computing capability will reduce the relative difficulty of HE operations. Consequently, more insight into its applicability will become increasingly valuable, as suggested by the trend in the growing popularity of HE research. This dissertation attempts to offer some beginnings to this insight by investigating the limitations of current HE implementations concerning surveillance.
 
 \setlength{\leftskip}{0cm}
 
@@ -33,15 +33,15 @@ It appears that the most prevailing explanation for this lack of research is HE'
 \label{sec:aimsAndContributions}
 \setlength{\leftskip}{0.25cm}
 \indent \indent
-This dissertation documents the design and implementation of a potential solution to the questions posed in §\ref{sec:motivation}, while attempting to follow the constraints impacting the aforementioned real-world systems. In particular, the contribution of the work is:
+This dissertation documents the design and implementation of an investigation into HE surveillance to answer the questions posed in §\ref{sec:motivation}. In particular, the following contributions.
 \begin{itemize}
-    \item The creation of a client-server application simulating the device-server stack utilised by existing surveillance devices like doorbell cameras, allowing secure transmission of video data from client to server and back again after performing inference.
-    \item The integration of Microsoft's Secure Encrypted Arithmetic Library (SEAL) \cite{SEAL} to allow secure and private inference of videos encrypted using the CKKS HE scheme \cite{CKKS}.
-    \item The implementation of a series of algorithms for enabling private and plain inference of video data to extract moving objects by producing a mask that can be applied to videos in the clear by the client.
-    \item An investigation into reducing transmission time from the perspectives of reducing memory usage of HE data and increasing the transmission rate between the client and server.
-    \item An investigation of Gaussian Mixture Models (GMMs) for HE encrypted background subtraction, beginning with the work by Stauffer and Grimson \cite{Stauffer} then moving into more general Expectation-Maximisation GMM algorithms \cite{Dempster}.
-    \item As an extension, the implementation of the CKKS scheme from scratch in Python, called MeKKS, based on the Homomorphic Encryption for Arithmetic of Approximate Numbers paper by Cheon et al.\ \cite{CKKS,BootstrappingHEAAN} to improve understanding of HE.
-    \item An evaluation of the efficacy of the above solutions using timing, accuracy, and \textit{(hopefully)} energy usage data to compare inference of CKKS and MeKKS solutions to plain videos, highlighting the advantages of the MeKKS implementation being targeted to this application over the more generic CKKS.
+    \item Creation of a client-server application simulating the device-server stack utilised by existing surveillance devices like doorbell cameras, allowing secure transmission of video data from client to server and back again after performing inference.
+    \item Integration of Microsoft's Secure Encrypted Arithmetic Library (SEAL) \cite{SEAL} to allow secure, private inference of videos encrypted using the CKKS HE scheme \cite{CKKS}.
+    \item Implementation of a series of algorithms for enabling private and plain inference of video data to extract moving objects by producing a mask that can be applied to videos in the clear by the client.
+    \item Optimisations to reduce transmission time from the perspectives of reducing memory usage of HE data and increasing the transmission rate between the client and server.
+    \item Investigation of GMMs for HE encrypted background subtraction, beginning with the work by Stauffer and Grimson \cite{Stauffer} then moving into more general Expectation-Maximisation GMM algorithms \cite{Dempster}.
+    \item Implementation of the CKKS scheme from scratch in Python, called MeKKS, based on the Homomorphic Encryption for Arithmetic of Approximate Numbers paper by Cheon et al.\ \cite{CKKS, BootstrappingHEAAN} to improve understanding of HE.
+    \item Evaluation of the efficacy of the above solutions using timing, accuracy, and energy usage data to compare inference of CKKS and MeKKS solutions to plain videos, highlighting the advantages of the MeKKS implementation being targeted to this application over the more generic CKKS.
 \end{itemize}
 
 \setlength{\leftskip}{0cm}
