--- a/dissertation.tex
+++ b/dissertation.tex
@@ -1,7 +1,7 @@
 % Template for a Computer Science Tripos Part II project dissertation
-\documentclass[12pt,a4paper,twoside,openright]{report}
+\documentclass[12pt,a4paper]{report}
 \usepackage[pdfborder={0 0 0}]{hyperref}    % turns references into hyperlinks
-\usepackage[margin=25mm]{geometry}  % adjusts page layout
+\usepackage[margin=20mm]{geometry}  % adjusts page layout
 \usepackage{graphicx}  % allows inclusion of PDF, PNG and JPG images
 \usepackage{verbatim}
 \usepackage{docmute}
@@ -99,6 +99,9 @@
 \bibliography{Bibliography}
 
 \appendix
+\include{homomorphicEncryption}
+\include{seamCarving}
+\include{lasiesta}
 \include{proposal}
 
 \end{document}
